fix faq spacing, about section shift down

--- a/css/main.css
+++ b/css/main.css
@@ -686,7 +686,7 @@ iframe {
   }
 
   .section#title { /* move title section up */
-    height: 36vh;
+    height: 38vh;
     margin: 0;
   }
 
@@ -926,9 +926,9 @@ iframe {
 }
 
 .faq-column {
-  flex: 1;
+  flex: none;
   padding: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 /* Same styles for questions and answers in both columns */
@@ -1073,7 +1073,7 @@ iframe {
     display: flex;
     flex-direction: column;
     font-size: 0.9em;
-    flex-direction: column;
+    justify-content: space-evenly;
   }
   #faq-right{
     padding-top: 100px;
